src/main/java/com/example/shop/web/error/BadRequestException.java

package com.example.shop.web.error;

public class BadRequestException extends RuntimeException {
  public BadRequestException(String msg) { super(msg); }
}
